# Projet

./: .env  .gitignore  README.md  docker-compose.yml
.github/workflows/: main_ci_cd.yml
F_Brain/: docker-compose.yml
F_Brain/client/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
F_Brain/client/public/: index.html  styles.css
F_Brain/client/src/: App.js  App.jsx  index.js  main.jsx  styles.css
F_Brain/client/src/Api/: api.js
F_Brain/client/src/components/: AddArticleForm.js  AddArticleFrom.js  AddProductForm.jsx  ArticleList.js  EditArticleForm.js  EditArticleFrom.js  EditProductForm.jsx  ProductCard.jsx  ProductList.jsx
F_Brain/monitoring/: Dockerfile  prometheus.yml
F_Brain/proxy/: Dockerfile  nginx.conf
F_Brain/server/: Dockerfile  docker-compose.yml  requirements.txt
F_Brain/server/articles/: models.py  serializers.py  urls.py  views.py
F_Brain/server/articles/migrations/: 0001_initial.py
F_Brain/server/config/: settings.py  urls.py
F_Brain/server/ecommerce/: settings.py  urls.py
F_Brain/server/products/: models.py
client/: Dockerfile  index.html  package.json  pyproject.toml
client/src/: App.jsx
client/src/components/: AddProductForm.jsx  EditProductForm.jsx  Footer.jsx  ProductCard.jsx  ProductList.jsx  header.jsx
monitoring/prometheus/: prometheus.yml
proxy/: Dockerfile  default.conf
server/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
server/api/: models.py  serializers.py  urls.py
server/server_config/: settings.py  urls.py
(+1 files in other folders)
